versioned_docs/version-0.10/enterprise/install/overview.mdx
---
title: Installation Overview
description: How to install Okteto Enterprise in your own Kubernetes cluster
sidebar_label: Overview
id: overview
---

Okteto Enterprise is a development platform for Kubernetes applications. Build better applications by developing and testing your code directly in your own Kubernetes infrastructure. Give your team the power of [Okteto Cloud](/docs/0.10/cloud/), with the control and flexibility of running in your own infrastructure.

Okteto Enterprise is free for small teams.  You get all the features of [Okteto Enterprise](/docs/0.10/enterprise/) for up to 3 users with 3 namespaces each.

Want to use Okteto Enterprise with a bigger team? [Let's talk](https://okteto.com/#talktous) 😎.

## Introduction

Okteto Enterprise is distributed as a Helm chart. This contains all the required components for the complete Okteto Enterprise experience.

Okteto Enterprise components:

1. NGINX Ingress
1. Cert Manager
1. Okteto Enterprise/API
1. Okteto Enterprise/Buildkit
1. Okteto Enterprise/Frontend
1. Okteto Enterprise/Migration
1. Okteto Enterprise/Registry
1. Okteto Enterprise/Validation Webhook

## Quick Installation Guides

For those looking to get up and running as fast as possible, we provide installation guides for different public cloud providers. These guides walk the user through deploying these charts with default values and basic configuration:

- [Install Okteto Enterprise in Amazon Elastic Kubernetes Service](/docs/0.10/enterprise/eks/)
- [Install Okteto Enterprise in Azure Kubernetes Service](/docs/0.10/enterprise/aks/)
- [Install Okteto Enterprise in Google Kubernetes Engine](/docs/0.10/enterprise/gke/)
- [Install Okteto Enterprise in DigitalOcean Kubernetes](/docs/0.10/enterprise/do/)

## Troubleshooting

We've done our best to make Okteto Enterprise easy to install and operate. [The troubleshooting page](/docs/0.10/enterprise/install/troubleshooting/) has tips and tricks to help troubleshoot common issues.

You can also [contact support](mailto:support@okteto.com) if you need assistance.

## Installation

The Okteto Enterprise chart contains all the required dependencies. This guide will walk you through the different options and features available.

1. [Preparation](/docs/0.10/enterprise/install/preparation/)
2. [Deployment](/docs/0.10/enterprise/install/deployment/)

If you are just looking to deploy a Proof of Concept, we recommend you follow our [Quick Installation Guides](#quick-installation-guides) for your first iteration.

### Upgrading

Instructions on how to upgrade your Okteto Enterprise instance [are available here](/docs/0.10/enterprise/install/upgrade/).

Please review [the release notes before upgrading](/docs/0.10/enterprise/install/releases/). New features, known issues, and configuration changes will be listed there.

### 3.5. Uninstalling Okteto Enterprise

To delete an existing release use:

```console
$ helm delete <your-release-name>
```

This will delete Okteto Enterprise, but not the resources created when using it (e.g. namespaces, accounts, deployments, etc...).
